stage 4.2: TD-1 reality check — record that the NSWindow trick doesn't beat fullscreen
The JNA + reflection plumbing works (we successfully write level=1000 and
collectionBehavior=257 into the underlying NSWindow), but the picker
still renders below fullscreen IDEA on macOS Sequoia. Bumping the
level from NSStatusWindowLevel up to NSScreenSaverWindowLevel did not
change the outcome.

Working theory: macOS fullscreen Space overlay is gated on the window
being an NSPanel (specifically with the non-activating panel style
mask), not a regular NSWindow. Compose Desktop's Window composable
creates a plain NSWindow, so neither level bumps nor collectionBehavior
flags promote it through the fullscreen barrier.

Update KDoc on the helper to flag the status, and expand the TD-1 entry
in the stage plan with:
  - the matrix of attempts (level=25 vs level=1000) so we don't redo
    them next time;
  - the working theory and four candidate next steps (isa-swizzling
    into NSPanel, native NSPanel via JNI/dylib shim, full reroute
    through a custom Skia-rendered panel, or accept the limitation).

Leaving the helper in place because (a) the diagnostic logging is
useful when the migration happens, (b) the level/behavior writes are
harmless even when they don't help, (c) the --add-exports plumbing is
exactly what the eventual NSPanel-based replacement will also need.

Co-Authored-By: Claude Opus 4.7 (1M context) <noreply@anthropic.com>